test_suite/ui/zero_discriminant_deferred.stderr
error[E0277]: the trait bound `AssertionFailed: ExactlyOneBitSet` is not satisfied
 --> ui/zero_discriminant_deferred.rs:7:5
  |
7 |     Zero = ZERO,
  |     ^^^^^^^^^^^ the trait `ExactlyOneBitSet` is not implemented for `AssertionFailed`
  |
  = help: the trait `ExactlyOneBitSet` is implemented for `AssertionSucceeded`

error[E0277]: the trait bound `AssertionFailed: ExactlyOneBitSet` is not satisfied
  --> ui/zero_discriminant_deferred.rs:14:5
   |
14 |     Overflown = (ZERO + 2) << 7,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExactlyOneBitSet` is not implemented for `AssertionFailed`
   |
   = help: the trait `ExactlyOneBitSet` is implemented for `AssertionSucceeded`
